[project]
name = "parser-ratings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "pydantic>=2.11.4",
    "ruff>=0.11.10",
    "schedule>=1.2.2",
]
